Fix query test